Fix minicard description text color to black, so that it is visible at light grey background.
Thanks to xet7 !

--- a/client/components/cards/minicard.css
+++ b/client/components/cards/minicard.css
@@ -265,6 +265,7 @@
 }
 .minicard .minicard-description {
   padding: 6px 0 0 8px;
+  color: #000;
   background-color: #eee;
   width: 100%;
   margin-bottom: 2px;
